--- a/base/style/splash.css
+++ b/base/style/splash.css
@@ -2,32 +2,24 @@ html, body
 {
     height: 100%;
 
-    overflow: hidden;
-
     -webkit-app-region: drag;
+
+    background-image: url("../../images/splash.png")
 }
 
-.background
+.versionTag
 {
-    background-image: linear-gradient(rgba(250, 171, 25, 0.3), rgba(250, 171, 25, 0.3)), url("../../images/splash.png");
-
-    z-index: -1;
-
     width: 100%;
-    height: 100%;
 
-    animation: backgroundBlur 1s ease-out;
-    animation-fill-mode: forwards;
-}
-
-.contentWrapper
-{
     position: absolute;
-    top: 0;
-}
 
-@keyframes backgroundBlur {
-    0% { filter: blur(0px); transform: scale(1.1); }
-    25% { filter: blur(0px); transform: scale(1.1); }
-    100% { filter: blur(10px); transform: scale(1.1); }
+    bottom: 10px;
+
+    text-align: center;
+
+    font-family: roboto;
+    font-size: 14px;
+    letter-spacing: 1.25px;
+    color: #344955;
+    font-weight: 300;
 }
